--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "geode_profile"
 description = "A contract for setting, updating and searching a universal profile for all Geode apps."
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Dr. Amy Messegee <support@blockandpurpose.com>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.0", default-features = false }
+ink = { version = "5.0.0-rc.1", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 [lib]
 path = "lib.rs"
